--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@tonaljs/tonal": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
+    "styled-css-grid": "^1.2.1",
+    "tone": "^14.7.77",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
