--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "@tonaljs/tonal": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.3.0",
     "styled-css-grid": "^1.2.1",
     "tone": "^14.7.77",
@@ -38,5 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
