--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "styled-components": "^5.3.0",
     "styled-css-grid": "^1.2.1",
     "tone": "^14.7.77",
+    "use-async-effect": "^2.2.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
