--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
     "compression": "^1.7.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "helmet": "^4.6.0",
     "method-override": "^3.0.0",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.12.14",
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "socket.io": "^4.1.2"
   }
 }
