--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@tonaljs/tonal": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "socket.io-client": "^4.1.2",
     "styled-components": "^5.3.0",
