--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 	},
 	"dependencies": {
 		"compression": "^1.7.4",
+		"cookie-parser": "^1.4.5",
+		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.2",
